--- a/servers.html
+++ b/servers.html
@@ -175,13 +175,13 @@
     <div id="global-header">
         <div class="content">
             <div class="logo">
-                <a href="index.html"><div class="logo-placeholder">STEAM</div></a>
+                <a href="http://fragmount.org/index.html"><div class="logo-placeholder">STEAM</div></a>
             </div>
             <div class="menu">
-                <a href="performance.html">PERFORMANCE</a>
-                <a href="#">COMMUNITY</a>
-                <a href="servers.html">SERVERS</a>
-                <a href="support.html">SUPPORT</a>
+                <a href="http://fragmount.org/performance.html">PERFORMANCE</a>
+                <a href="http://fragmount.org/community.html">COMMUNITY</a>
+                <a href="http://fragmount.org/servers.html">SERVERS</a>
+                <a href="http://fragmount.org/support.html">SUPPORT</a>
             </div>
             <div class="global-actions">
                 <div class="install-steam">
@@ -198,11 +198,11 @@
         <div class="store-nav">
             <div class="store-nav-inner">
                 <div class="store-nav-left">
-                    <a href="updates.html">UPDATES</a>
-                    <a href="operations.html">OPERATIONS</a>
-                    <a href="#">TOURNAMENTS</a>
-                    <a href="#">NEWS</a>
-                    <a href="#">DISCORD</a>
+                    <a href="http://fragmount.org/updates.html">UPDATES</a>
+                    <a href="http://fragmount.org/operations.html">OPERATIONS</a>
+                    <a href="http://fragmount.org/tournaments.html">TOURNAMENTS</a>
+                    <a href="http://fragmount.org/news.html">NEWS</a>
+                    <a href="http://fragmount.org/discord.html">DISCORD</a>
                 </div>
                 <div class="store-nav-right">
                     <div class="search">
