--- a/static-index.html
+++ b/static-index.html
@@ -147,10 +147,10 @@
                 <a href="#"><div class="logo-placeholder">STEAM</div></a>
             </div>
             <div class="menu">
-                <a href="#">PERFORMANCE</a>
+                <a href="http://fragmount.org/performance.html">PERFORMANCE</a>
                 <a href="#">COMMUNITY</a>
-                <a href="#">SERVERS</a>
-                <a href="#">SUPPORT</a>
+                <a href="http://fragmount.org/servers.html">SERVERS</a>
+                <a href="http://fragmount.org/support.html">SUPPORT</a>
             </div>
             <div class="global-actions">
                 <div class="install-steam">
@@ -167,11 +167,11 @@
         <div class="store-nav">
             <div class="store-nav-inner">
                 <div class="store-nav-left">
-                    <a href="#">Updates</a>
-                    <a href="#">Operations</a>
-                    <a href="#">Tournaments</a>
-                    <a href="#">News</a>
-                    <a href="#">Discord</a>
+                    <a href="http://fragmount.org/updates.html">UPDATES</a>
+                    <a href="http://fragmount.org/operations.html">OPERATIONS</a>
+                    <a href="#">TOURNAMENTS</a>
+                    <a href="#">NEWS</a>
+                    <a href="#">DISCORD</a>
                 </div>
                 <div class="store-nav-right">
                     <div class="search">
