--- a/operations.html
+++ b/operations.html
@@ -133,13 +133,13 @@
     <div id="global-header">
         <div class="content">
             <div class="logo">
-                <a href="index.html"><div class="logo-placeholder">STEAM</div></a>
+                <a href="http://fragmount.org/index.html"><div class="logo-placeholder">STEAM</div></a>
             </div>
             <div class="menu">
-                <a href="performance.html">PERFORMANCE</a>
+                <a href="http://fragmount.org/performance.html">PERFORMANCE</a>
                 <a href="#">COMMUNITY</a>
-                <a href="servers.html">SERVERS</a>
-                <a href="support.html">SUPPORT</a>
+                <a href="http://fragmount.org/servers.html">SERVERS</a>
+                <a href="http://fragmount.org/support.html">SUPPORT</a>
             </div>
             <div class="global-actions">
                 <div class="install-steam">
@@ -156,8 +156,8 @@
         <div class="store-nav">
             <div class="store-nav-inner">
                 <div class="store-nav-left">
-                    <a href="updates.html">UPDATES</a>
-                    <a href="operations.html" class="active">OPERATIONS</a>
+                    <a href="http://fragmount.org/updates.html">UPDATES</a>
+                    <a href="http://fragmount.org/operations.html" class="active">OPERATIONS</a>
                     <a href="#">TOURNAMENTS</a>
                     <a href="#">NEWS</a>
                     <a href="#">DISCORD</a>
