--- a/support.html
+++ b/support.html
@@ -3,39 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS:GO Performance</title>
+    <title>CS:GO Support</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
-        /* Additional styles specific to the Performance page */
-        .performance-container {
+        /* Additional styles specific to the Support page */
+        .support-container {
             background: linear-gradient(to bottom, rgba(32, 55, 82, 0.5) 0%, rgba(17, 26, 38, 0.5) 80%);
             padding: 20px;
             border-radius: 4px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
             margin-bottom: 20px;
+            display: flex;
+            flex-direction: column;
+            height: 600px;
         }
 
-        .performance-section {
-            margin-bottom: 30px;
-        }
-
-        .performance-title {
-            font-size: 20px;
-            color: #67c1f5;
-            margin-bottom: 15px;
-            border-bottom: 1px solid rgba(103, 193, 245, 0.3);
-            padding-bottom: 10px;
-        }
-
-        .performance-content {
-            font-size: 14px;
-            line-height: 1.6;
-            color: #c6d4df;
-        }
-
-        .performance-box {
+        .support-textarea {
             width: 100%;
-            height: 500px;
+            height: 100%;
             background-color: rgba(17, 26, 38, 0.5);
             border: 1px solid #4a5a6c;
             border-radius: 4px;
@@ -45,7 +30,12 @@
             font-size: 14px;
             resize: none;
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
-            overflow: auto;
+        }
+
+        .support-textarea:focus {
+            outline: none;
+            border-color: #67c1f5;
+            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3), 0 0 5px rgba(103, 193, 245, 0.5);
         }
     </style>
 </head>
@@ -53,7 +43,7 @@
     <div id="global-header">
         <div class="content">
             <div class="logo">
-                <a href="http://fragmount.org/index.html"><div class="logo-placeholder">STEAM</div></a>
+                <a href="index.html"><div class="logo-placeholder">STEAM</div></a>
             </div>
             <div class="menu">
                 <a href="http://fragmount.org/performance.html">PERFORMANCE</a>
@@ -96,19 +86,12 @@
         <div class="app-page">
             <div class="app-header">
                 <div class="app-title">
-                    <h1>CS:GO PERFORMANCE</h1>
+                    <h1>CS:GO SUPPORT</h1>
                 </div>
             </div>
 
-            <div class="performance-container">
-                <div class="performance-section">
-                    <div class="performance-title">Performance Settings</div>
-                    <div class="performance-content">
-                        <div class="performance-box">
-                            <!-- Empty box for content -->
-                        </div>
-                    </div>
-                </div>
+            <div class="support-container">
+                <textarea class="support-textarea" placeholder="Enter your message here..."></textarea>
             </div>
         </div>
     </div>
