--- a/updates.html
+++ b/updates.html
@@ -57,13 +57,13 @@
     <div id="global-header">
         <div class="content">
             <div class="logo">
-                <a href="index.html"><div class="logo-placeholder">STEAM</div></a>
+                <a href="http://fragmount.org/index.html"><div class="logo-placeholder">STEAM</div></a>
             </div>
             <div class="menu">
-                <a href="performance.html">PERFORMANCE</a>
+                <a href="http://fragmount.org/performance.html">PERFORMANCE</a>
                 <a href="#">COMMUNITY</a>
-                <a href="servers.html">SERVERS</a>
-                <a href="support.html">SUPPORT</a>
+                <a href="http://fragmount.org/servers.html">SERVERS</a>
+                <a href="http://fragmount.org/support.html">SUPPORT</a>
             </div>
             <div class="global-actions">
                 <div class="install-steam">
@@ -80,8 +80,8 @@
         <div class="store-nav">
             <div class="store-nav-inner">
                 <div class="store-nav-left">
-                    <a href="updates.html" class="active">UPDATES</a>
-                    <a href="operations.html">OPERATIONS</a>
+                    <a href="http://fragmount.org/updates.html" class="active">UPDATES</a>
+                    <a href="http://fragmount.org/operations.html">OPERATIONS</a>
                     <a href="#">TOURNAMENTS</a>
                     <a href="#">NEWS</a>
                     <a href="#">DISCORD</a>
