--- a/support.html
+++ b/support.html
@@ -8,31 +8,27 @@
     <style>
         /* Additional styles specific to the Support page */
         .support-container {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
             background: linear-gradient(to bottom, rgba(32, 55, 82, 0.5) 0%, rgba(17, 26, 38, 0.5) 80%);
             padding: 20px;
             border-radius: 4px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
             margin-bottom: 20px;
-            display: flex;
-            flex-direction: column;
-            height: 600px;
         }
-
-        .support-textarea {
-            width: 100%;
-            height: 100%;
-            background-color: rgba(17, 26, 38, 0.5);
+        .support-section {
+            background-color: rgba(17, 26, 38, 0.7);
             border: 1px solid #4a5a6c;
             border-radius: 4px;
             color: #c6d4df;
             padding: 15px;
             font-family: Arial, sans-serif;
             font-size: 14px;
-            resize: none;
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+            min-height: 50px;
         }
-
-        .support-textarea:focus {
+        .support-section:focus {
             outline: none;
             border-color: #67c1f5;
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3), 0 0 5px rgba(103, 193, 245, 0.5);
@@ -50,14 +46,6 @@
                 <a href="#">COMMUNITY</a>
                 <a href="http://fragmount.org/servers.html">SERVERS</a>
                 <a href="http://fragmount.org/support.html">SUPPORT</a>
-            </div>
-            <div class="global-actions">
-                <div class="install-steam">
-                    <a href="#">Install Steam</a>
-                </div>
-                <div class="user-actions">
-                    <a href="#">login</a> | <a href="#">language</a>
-                </div>
             </div>
         </div>
     </div>
@@ -82,7 +70,7 @@
                 </div>
             </div>
         </div>
-
+        
         <div class="app-page">
             <div class="app-header">
                 <div class="app-title">
@@ -91,7 +79,12 @@
             </div>
 
             <div class="support-container">
-                <textarea class="support-textarea" placeholder="Enter your message here..."></textarea>
+                <div class="support-section" contenteditable="true">Enter section 1 text here...</div>
+                <div class="support-section" contenteditable="true">Enter section 2 text here...</div>
+                <div class="support-section" contenteditable="true">Enter section 3 text here...</div>
+                <div class="support-section" contenteditable="true">Enter section 4 text here...</div>
+                <div class="support-section" contenteditable="true">Enter section 5 text here...</div>
+                <div class="support-section" contenteditable="true">Enter section 6 text here...</div>
             </div>
         </div>
     </div>
@@ -106,15 +99,15 @@
                 <p>VAT included in all prices where applicable.</p>
             </div>
             <div class="footer-links">
-                <a href="#">Valve</a> |
-                <a href="#">Privacy Policy</a> |
-                <a href="#">Legal</a> |
-                <a href="#">Steam Subscriber Agreement</a> |
+                <a href="#">Steam</a> |
+                <a href="#">Discord</a> |
+                <a href="#">eMail</a> |
+                <a href="#">Youtube</a> |
                 <a href="#">Report A Bug</a>
             </div>
         </div>
     </div>
-
+	
     <script src="js/script.js"></script>
 </body>
 </html>
