--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                 <div class="store-nav-left">
                     <a href="http://fragmount.org/updates.html">UPDATES</a>
                     <a href="http://fragmount.org/operations.html">OPERATIONS</a>
-                    <a href="#">TOURNAMENTS</a>
+                    <a href="http://fragmount.org/tournaments.html">TOURNAMENTS</a>
                     <a href="#">NEWS</a>
-                    <a href="#">DISCORD</a>
+                    <a href="https://discord.gg/t2CgcSuXr6">DISCORD</a>
                 </div>
                 <div class="store-nav-right">
                     <div class="search">
@@ -196,12 +196,12 @@
                     <div class="highlight-trailer">
                         <div class="highlight-player">
                             <video id="game-trailer" controls poster="img/poster-placeholder.jpg" class="game-video">
-                                <source src="videos/your-trailer.mp4" type="video/mp4">
+                                <source src="video/trailer.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="highlight-strip">
-                            <div class="highlight-selector selected" data-type="video" data-src="videos/your-trailer.mp4">
+                            <div class="highlight-selector selected" data-type="video" data-src="video/trailer.mp4">
                                 <div class="video-thumbnail">TRAILER</div>
                             </div>
                             <div class="highlight-selector" data-type="image" data-src="img/screenshots/dust2.jpg">
@@ -253,7 +253,7 @@
                     </div>
 
                     <div class="block">
-                        <div class="block-header green-gradient-header">
+                        <div class="block-header">
                             <h4>POPULAR USER-DEFINED TAGS FOR THIS PRODUCT</h4>
                         </div>
                         <div class="block-content">
@@ -406,14 +406,14 @@
                 <div class="valve-logo">VALVE</div>
             </div>
             <div class="footer-text">
-                <p>© 2016 Valve Corporation. All rights reserved. All trademarks are property of their respective owners in the US and other countries.</p>
-                <p>VAT included in all prices where applicable.</p>
+                <p>© 2016 FragMount. All trademarks are property of their respective owners in the US and other countries.</p>
+                <p>This project is not affiliated with Valve Corporation in any way whatsoever.</p>
             </div>
             <div class="footer-links">
-                <a href="#">Valve</a> |
-                <a href="#">Privacy Policy</a> |
-                <a href="#">Legal</a> |
-                <a href="#">Steam Subscriber Agreement</a> |
+                <a href="#">frytt</a> |
+                <a href="https://discord.gg/t2CgcSuXr6">Discord</a> |
+                <a href="#">Email</a> |
+                <a href="#">Youtube</a> |
                 <a href="#">Report A Bug</a>
             </div>
         </div>
