--- a/static-index.html
+++ b/static-index.html
@@ -171,7 +171,7 @@
                     <a href="http://fragmount.org/operations.html">OPERATIONS</a>
                     <a href="#">TOURNAMENTS</a>
                     <a href="#">NEWS</a>
-                    <a href="#">DISCORD</a>
+                    <a href="https://discord.gg/t2CgcSuXr6">DISCORD</a>
                 </div>
                 <div class="store-nav-right">
                     <div class="search">
@@ -196,12 +196,12 @@
                     <div class="highlight-trailer">
                         <div class="highlight-player">
                             <video id="game-trailer" controls poster="img/poster-placeholder.jpg" class="game-video">
-                                <source src="videos/your-trailer.mp4" type="video/mp4">
+                                <source src="video/trailer.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="highlight-strip">
-                            <div class="highlight-selector selected" data-type="video" data-src="videos/your-trailer.mp4">
+                            <div class="highlight-selector selected" data-type="video" data-src="video/trailer.mp4">
                                 <div class="video-thumbnail">TRAILER</div>
                             </div>
                             <div class="highlight-selector" data-type="image" data-src="img/screenshots/dust2.jpg">
@@ -410,10 +410,10 @@
                 <p>VAT included in all prices where applicable.</p>
             </div>
             <div class="footer-links">
-                <a href="#">Valve</a> |
-                <a href="#">Privacy Policy</a> |
-                <a href="#">Legal</a> |
-                <a href="#">Steam Subscriber Agreement</a> |
+                <a href="#">frytt</a> |
+                <a href="https://discord.gg/t2CgcSuXr6">Discord</a> |
+                <a href="#">Email</a> |
+                <a href="#">Youtube</a> |
                 <a href="#">Report A Bug</a>
             </div>
         </div>
